# novel-agent

./: .gitignore  DEPLOY-FLY.md  DEPLOY-RAILWAY-E2B.md  Dockerfile  Dockerfile.railway  README.md  SPEC.md  docker-compose.prod.yml  docker-compose.yml  e2b.toml  fly.toml  package.json  railway.json  start.sh
.github/workflows/: deploy-railway.yml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  chapters.py  files.py  plans.py  projects.py  skills.py  spa.py  system.py
backend/app/core/: config.py  security.py
backend/app/models/: chapter.py  project.py  skill.py  user.py  user_plan.py
backend/app/schemas/: chapter.py  project.py  skill.py  user.py
backend/app/services/: default_skills.py  opencode.py  plans.py  s3.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/api/: index.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/views/: ChapterEditor.vue  Dashboard.vue  Home.vue  Login.vue  ProjectDetail.vue  Register.vue  Skills.vue
scripts/: create_sample_skill.py
