[tool.poetry]
name = "novel-agent-backend"
version = "0.1.0"
description = "Novel Agent Backend with FastAPI"
authors = ["jafe"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.0" }
python-multipart = "^0.0.12"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
minio = "^7.2.0"
